[tool.poetry]
name = "dummy_endpoint"
version = "0.1.0"
description = ""
authors = ["Matthias Osswald <m@osswald.li>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
pylint = "^2.6.0"
uvicorn = "^0.13.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
